Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBooleanRetObject.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, Object> yoda
        Object ret = yoda:useForce(one, two)
        output "passed"
     end
end
