Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriBooleanRetnumberFail.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
